force-app/main/default/objects/RemoteCompute__e/RemoteCompute__e.object-meta.xml
<CustomObject>
    <label>RemoteCompute</label>
    <pluralLabel>RemoteComputes</pluralLabel>
</CustomObject>