force-app/main/default/objects/RemoteCompute__e/fields/ComputeAttributes__c.field-meta.xml
<CustomField>
    <fullName>ComputeAttributes__c</fullName>
    <label>ComputeAttributes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>