force-app/main/default/objects/RemoteCompute__e/fields/ComputeService__c.field-meta.xml
<CustomField>
    <fullName>ComputeService__c</fullName>
    <label>ComputeService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>