force-app/main/default/objects/RemoteCompute__e/fields/ContextObjectName__c.field-meta.xml
<CustomField>
    <fullName>ContextObjectName__c</fullName>
    <label>ContextObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>