force-app/main/default/objects/RemoteCompute__e/fields/ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ContextRecordId__c</fullName>
    <label>ContextRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>